# D-Star-ex

./: README.md  datastar-example-prompt.md  pyproject.toml
app/: main.py
app/static/: style.css
app/templates/: base.html  index.html
tests/: test_app.py
